assembly-endgame - fix game status and game layout alignemnt

--- a/assembly-endgame/src/index.css
+++ b/assembly-endgame/src/index.css
@@ -9,8 +9,12 @@ body {
   color: #D9D9D9;
   padding: 20px;
   height: 100vh;
+}
+
+main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
@@ -30,6 +34,8 @@ header > p {
 }
 
 section.game-status {
+  width: 100%;
+  max-width: 350px;
   background-color: #10A95B;
   display: flex;
   flex-direction: column;
